Updating the js file name

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <a class='submit' onclick="checkDomain()">Check</a>
         </div>
     </div>
-    <script src="vendorFileChecker.js"> </script>
+    <script src="vendorfileChecker.js"> </script>
 </body>
 </html>
 
